# auction

./: README.md  pyproject.toml
biddings/: admin.py  consumers.py  forms.py  models.py  routing.py  tools.py  urls.py  views.py
biddings/management/commands/: fill_db.py
biddings/migrations/: 0001_initial.py  0002_alter_biddingitem_image.py  0003_alter_biddingitem_image.py
config/: asgi.py  settings.py  urls.py
static/css/: main.css
templates/: delete_confirm.html  index.html  navbar.html  wrapper.html
templates/biddings/: bidding_item_create.html  bidding_item_detail.html  bidding_item_list.html  bidding_item_update.html
templates/users/: register.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
